@@ -2,38 +2,26 @@
 
 class QueryRequest {
 
-    public $shape;
+    public $bbox;
     
     // if empty: server should select layers from layersRequest  
-    public $layers;
+    public $layerIds;
     
     // retrieveType: fetch attributes ? fetch shapes ?
     // resultProperties: layer * maxResult * startIndex
 }
 
 class ResultElement {
-    
-    // public $index
+
     public $id;
-    
-    // do we need this ?
-    public $tileindex;
-    public $classindex;
-    
     public $values;
 }
 
 class LayerResult {
     
     public $layerId;
-
     public $numResults;
-    // TODO: remove these: use a simplier solution
-    public $startIndex;
-    public $endIndex;
-    
     public $fields;
-    
     public $resultElements;
 }
 
