@@ -1,0 +1,10 @@
+<?php
+
+class HilightRequest {
+    public $layerId;
+    public $selectedIds;
+}
+
+/* no HilightResult */
+
+?>
