@@ -1,3 +1,7 @@
+2004-09-28  Sylvain Pasche  <sylvain.pasche@camptocamp.com>
+		* added hilight and selection plugins
+		* query plugin for SOAP mode
+
 2004-09-16  Sylvain Pasche  <sylvain.pasche@camptocamp.com>
 
         * simplification of plugin interfaces
